added phone and password input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
 <form id="container">
-	<input id="form-email" type="email" name="email">
+	<label for="email">EMAIL</label>
+		<input id="form-email" type="email" name="email">
+	<label for="phone">TELEPHONE</label>
+		<input id="form-phone" type="number" name="phone">
+	<label>PASSWORD</label>
+		<input id="form-pass" type="password" name="password">
+
 
 	
 </form>
