added all inputs and sub button

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<form id="container">
-	<label for="email">EMAIL</label>
-		<input id="form-email" type="email" name="email">
-	<label for="phone">TELEPHONE</label>
-		<input id="form-phone" type="number" name="phone">
-	<label>PASSWORD</label>
-		<input id="form-pass" type="password" name="password">
-
-
-	
+<form id="val">
+	<div id="wrapper">
+		<label for="email">EMAIL</label>
+		<input type="email" name="email"/>
+		<label for="phone">TELEPHONE</label>
+		<input type="number" name="phone"/>
+		<label for="pass">PASSWORD</label>
+		<input type="password" name="pass"/>
+		<label for="pass">CONFIRM PASSWORD</label>
+		<input  type="password" name="pass"/>
+		<input id="submitButton" type="submit" value="submit"/>
+	</div>
 </form>
 
 <script type="text/Javascript" src="jquery.min.js"></script>
