--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<form id="val">
+<form>
 	<div id="wrapper">
 		<label for="email">EMAIL</label>
 		<input type="email" name="email"/>
