--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <form>
 	<div id="wrapper">
 		<label for="email">EMAIL</label>
-		<input type="email" name="email"/>
+		<input type="email" name="email" id="email"/>
 		<label for="phone">TELEPHONE</label>
 		<input type="number" name="phone"/>
 		<label for="pass">PASSWORD</label>
