--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+<div id="wrapper">
 <form>
-	<div id="wrapper">
+	<div id="error"></div>
 		<label for="email">EMAIL</label>
-		<input type="email" name="email" id="email"/>
+		<input name="email" id="email"/>
 		<label for="phone">TELEPHONE</label>
-		<input type="number" name="phone"/>
+		<input name="phone" id="phone"/>
 		<label for="pass">PASSWORD</label>
-		<input type="password" name="pass"/>
+		<input type="password" name="pass" id="passOne"/>
 		<label for="pass">CONFIRM PASSWORD</label>
-		<input  type="password" name="pass"/>
+		<input  type="password" name="pass" id="passTwo"/>
 		<input id="submitButton" type="submit" value="submit"/>
-	</div>
 </form>
+</div>
 
 <script type="text/Javascript" src="jquery.min.js"></script>
 <script type="text/Javascript" src="main.js"></script>
